--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.3"
+    "eslint": "^9.5.0",
+    "eslint-config-next": "^14.2.3",
+    "@eslint/config-array": "^0.10.8",
+    "@eslint/object-schema": "^3.0.0",
+    "rimraf": "^5.0.5",
+    "glob": "^10.3.10"
   }
 }
